# rtm-rust-timer

./: Architecture.md  Cargo.toml  LICENSE  README.md  build.rs
assets/: icon.icns
src/: app.rs  main.rs  timer.rs
src/components/: app.rs  font.rs  frame.rs  icon.rs  logic.rs  mod.rs  ui.rs
wix/: License.rtf  main.wxs
